# llmlite

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: kube-workflow.yaml
apis/: api.py  chat.py  utils.py
apis/tests/: chatglm_test.py  llama_test.py  test_api.py  test_chat.py  test_utils.py
e2e/: e2e_chat.py  test_chat.py
examples/: chatglm2.py  chatgpt.py  codellama.py  llama2.py  vllm.py
integration_tests/: test_output.py
llmlite/: __init__.py  consts.py
llmlite/apis/: __init__.py  chat.py  chatllm.py  utils.py
llmlite/backends/: backend.py  hf_backend.py  vllm_backend.py
llmlite/llms/: baichuan.py  chat.py  chatglm.py  chatglm2.py  chatgpt.py  codellama.py  config.py  huggingface.py  llama.py  llama2.py  llm.py  messages.py  model.py
llmlite/utils/: envs.py  log.py  util.py  validation.py
llms/: chat.py  chatglm.py  chatgpt.py  huggingface.py  llama.py  llama_hf.py
llms/tests/: test_chatglm.py  test_llama.py
tests/integration_tests/: integration_test_chat.py  test_chat.py  test_vllm.py  util.py
tests/unit_tests/apis/: test_chat.py  test_utils.py
tests/unit_tests/llms/: test_baichuan.py  test_chatglm.py  test_code_llama.py  test_llama.py  test_model.py
tests/unit_tests/utils/: test_util.py  test_validation.py
utils/: log.py
